--- a/package.json
+++ b/package.json
@@ -1,42 +1,51 @@
 {
-    "name": "grunt-cache-bust",
-    "description": "Bust static assets from the cache using content hashing",
-    "version": "0.4.13",
-    "author": "Ben Holland <hi@benholland.me>",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/hollandben/grunt-cache-bust.git"
-    },
-    "licenses": [{
-        "type": "MIT",
-        "url": "https://github.com/hollandben/grunt-cache-bust/blob/master/LICENSE-MIT"
-    }],
-    "engines": {
-        "node": ">= 0.10.0"
-    },
-    "scripts": {
-        "test": "grunt test"
-    },
-    "devDependencies": {
-        "grunt-contrib-clean": "~0.6.0",
-        "grunt-contrib-copy": "~0.8.0",
-        "grunt-contrib-jshint": "~0.11.0",
-        "grunt-contrib-nodeunit": "~0.4.1",
-        "grunt-contrib-watch": "~0.6.1"
-    },
-    "peerDependencies": {
-        "grunt": "~0.4.5"
-    },
-    "dependencies": {
-        "cheerio": "~0.18.0",
-        "css": "~2.2.0",
-        "flatten": "~0.0.1"
-    },
-    "keywords": [
-        "grunt",
-        "grunt plugin",
-        "cache",
-        "bust",
-        "bust assets"
-    ]
+  "name": "grunt-cache-bust-lazy-loading",
+  "description": "Bust static assets from the cache using content hashing. It also supports lazy loading for divs and images when using class lazy. ",
+  "version": "0.4.13",
+  "author": {
+    "name": "Bhaskar Melkani",
+    "email": "melkani.bhaskar@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bhaskarmelkani/grunt-cache-bust-lazy-loading.git"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/bhaskarmelkani/grunt-cache-bust-lazy-loading/blob/master/LICENSE-MIT"
+    }
+  ],
+  "engines": {
+    "node": ">= 0.10.0"
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
+  "devDependencies": {
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-copy": "~0.8.0",
+    "grunt-contrib-jshint": "~0.11.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-watch": "~0.6.1"
+  },
+  "peerDependencies": {
+    "grunt": "~0.4.5"
+  },
+  "dependencies": {
+    "cheerio": "~0.18.0",
+    "css": "~2.2.0",
+    "flatten": "~0.0.1"
+  },
+  "keywords": [
+    "grunt",
+    "grunt plugin",
+    "cache",
+    "bust",
+    "bust assets"
+  ],
+  "homepage": "https://github.com/bhaskarmelkani/grunt-cache-bust-lazy-loading",
+  "_npmVersion": "2.5.1",
+  "_nodeVersion": "0.12.0",
+  "directories": {}
 }
